@@ -1,49 +1,40 @@
 package HackerRank.algorithmsbasics.warmup;
 
 import java.io.*;
-import java.math.*;
-import java.security.*;
-import java.text.*;
 import java.util.*;
-import java.util.concurrent.*;
-import java.util.function.*;
-import java.util.regex.*;
 import java.util.stream.*;
 
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 
-class Result2 {
+class Result1 {
 
     /*
-     * Complete the 'aVeryBigSum' function below.
+     * Complete the 'simpleArraySum' function below.
      *
-     * The function is expected to return a LONG_INTEGER.
-     * The function accepts LONG_INTEGER_ARRAY ar as parameter.
+     * The function is expected to return an INTEGER.
+     * The function accepts INTEGER_ARRAY ar as parameter.
      */
 
-    public static long aVeryBigSum(List<Long> ar) {
-        long sum = 0;
-        for (long element : ar) {
+    public static int simpleArraySum(List<Integer> ar) {
+        int sum = 0;
+        for (int element : ar) {
             sum += element;
         }
         return sum;
     }
-
 }
 
-public class P2 {
+public class SimpleArraySum {
     public static void main(String[] args) throws IOException {
         BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(System.in));
         BufferedWriter bufferedWriter = new BufferedWriter(new OutputStreamWriter(System.out));
 
         int arCount = Integer.parseInt(bufferedReader.readLine().trim());
 
-        List<Long> ar = Stream.of(bufferedReader.readLine().replaceAll("\\s+$", "").split(" "))
-                .map(Long::parseLong)
-                .collect(toList());
+        List<Integer> ar = Stream.of(bufferedReader.readLine().replaceAll("\\s+$", "").split(" "))
+                .map(Integer::parseInt).toList();
 
-        long result = Result2.aVeryBigSum(ar);
+        int result = Result1.simpleArraySum(ar);
 
         bufferedWriter.write(String.valueOf(result));
         bufferedWriter.newLine();
@@ -52,3 +43,4 @@ public class P2 {
         bufferedWriter.close();
     }
 }
+
